--- a/src/main/resources/templates/transfer.html
+++ b/src/main/resources/templates/transfer.html
@@ -1,20 +1,88 @@
-<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
-<html lang="en"  xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-    <title>Transfer</title>
-  <link rel="stylesheet" href="/styles.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://kit.fontawesome.com/363fc0775f.js" crossorigin="anonymous"></script>
-</head>
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments/head.html"></head>
 <body>
-    <div th:each="transfer, iter : ${transfers}">
-        <p th:text="'Transfer n°' + ${iter.count}"></p>
-        <p th:text="'Amount: ' + ${transfer.getAmount()}"></p>
-        <p th:text="'Description: ' + ${transfer.getDescription()}"></p>
-        <p th:text="${#dates.format(transfer.getDate(), 'MM-yyyy')}"></p>
-        <p th:text="'Commission: ' + ${transfer.getCommission()}"></p>
-        <hr>
+    <header th:replace="fragments/header.html"></header>
+    <nav th:replace="fragments/breadcrumbs.html"></nav>
+    <ul class="nav nav-tabs ps-4">
+        <li class="nav-item">
+            <a class="nav-link" th:classappend="${selectedTab == 'transfer' ? 'active' : ''}" th:href="@{/transfer}">Transfer between Buddies</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" th:classappend="${selectedTab == 'banktransfer' ? 'active' : ''}" th:href="@{/bank-transfer}">Bank Transfer</a>
+        </li>
+    </ul>
+    <div class="container py-4 px-5" th:if="${selectedTab == 'transfer'}">
+        <div class="d-flex justify-content-between">
+            <h4>Send Money</h4>
+            <a href="/home"><button class="btn btn-primary nowrap">Add Connection</button></a>
+        </div>
+        <div class="d-flex justify-content-evenly p-5 grey-bg">
+            <select name="">
+                <option value="">Select A Connection</option>
+            </select>
+            <input type="number" placeholder="0">
+            <button type="button" class="btn btn-success green-bg px-5">Pay</button>
+        </div>
+        <h4 class="mt-4">My Transactions</h4>
+        <table class="table table-striped table-borderless transfer-table">
+            <thead>
+            <tr class="transfer-row">
+                <th scope="col">Connection</th>
+                <th scope="col">Description</th>
+                <th scope="col">Amount</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="transfer : ${transfers}" class="transfer-row">
+                <td th:text="${currentUserFullname == transfer.getBeneficiaryFullname()} ? ${transfer.getSenderFullname()} : ${transfer.getSenderFullname()}"></td>
+                <td class="description"><div th:text="${transfer.description}"></div></td>
+                <td th:text="${transfer.amount}"></td>
+            </tr>
+            </tbody>
+        </table>
     </div>
+    <div class="container py-4 px-5" th:if="${selectedTab == 'banktransfer'}">
+        <div class="d-flex justify-content-start">
+            <h4 class="mt-4">Add Money</h4>
+        </div>
+        <div class="p-5 grey-bg">
+            <div class="d-flex justify-content-between mb-3">
+                <div class="col-4">
+                    <label for="amount" class="form-label">Amount</label>
+                    <input type="number" class="form-control" id="amount" placeholder="0">
+                </div>
+                <div class="col-6">
+                    <label for="bankAccountNumber" class="form-label">Bank account number</label>
+                    <input type="text" class="form-control" id="bankAccountNumber" placeholder="FR76...">
+                </div>
+            </div>
+            <div class="d-flex justify-content-between">
+                <div class="col-4">
+                    <label for="description" class="form-label">Description</label>
+                    <input type="text" class="form-control" id="description" placeholder="Cinema">
+                </div>
+                <button type="button" class="btn btn-success green-bg px-5 mt-auto">Add Money</button>
+            </div>
+        </div>
+        <h4>My Transfers</h4>
+        <table class="table table-striped table-borderless transfer-table">
+            <thead>
+            <tr class="transfer-row">
+                <th scope="col">Date</th>
+                <th scope="col">Description</th>
+                <th scope="col">Amount</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="transfer : ${bankTransfers}" class="transfer-row">
+                <td th:text="${#dates.format(transfer.getDate(), 'dd/MM/yyyy')}"></td>
+                <td class="description"><div th:text="${transfer.description}"></div></td>
+                <td th:text="${transfer.amount}"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
