--- a/src/main/resources/templates/updateuser.html
+++ b/src/main/resources/templates/updateuser.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-    <title>Update Info</title>
-    <link rel="stylesheet" href="../static/styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/363fc0775f.js" crossorigin="anonymous"></script>
-</head>
+<head th:replace="fragments/head.html"></head>
 <body>
     <form th:action="@{/update/{id}(id=${user.id})}" th:object="${user}" action="#" class="form" method="post">
         <div class="input-group mb-3">
