--- a/src/main/resources/templates/transfer.html
+++ b/src/main/resources/templates/transfer.html
@@ -46,25 +46,25 @@
         <div class="d-flex justify-content-start">
             <h4 class="mt-4">Add Money</h4>
         </div>
-        <div class="p-5 grey-bg">
+        <form th:action="@{/transfer/add-money}" th:object="${bankTransfer}" action="#" method="post" class="p-5 grey-bg">
             <div class="d-flex justify-content-between mb-3">
                 <div class="col-4">
                     <label for="amount" class="form-label">Amount</label>
-                    <input type="number" class="form-control" id="amount" placeholder="0">
+                    <input th:field="*{amount}" type="number" class="form-control" id="amount" placeholder="0">
                 </div>
                 <div class="col-6">
                     <label for="bankAccountNumber" class="form-label">Bank account number</label>
-                    <input type="text" class="form-control" id="bankAccountNumber" placeholder="FR76...">
+                    <input th:field="*{bankAccountNumber}" type="text" class="form-control" id="bankAccountNumber" placeholder="FR76...">
                 </div>
             </div>
             <div class="d-flex justify-content-between">
                 <div class="col-4">
                     <label for="description" class="form-label">Description</label>
-                    <input type="text" class="form-control" id="description" placeholder="Cinema">
+                    <input th:field="*{description}" type="text" class="form-control" id="description" placeholder="Cinema">
                 </div>
-                <button type="button" class="btn btn-success green-bg px-5 mt-auto">Add Money</button>
+                <button type="submit" class="btn btn-success green-bg px-5 mt-auto">Add Money</button>
             </div>
-        </div>
+        </form>
         <h4>My Transfers</h4>
         <table class="table table-striped table-borderless transfer-table">
             <thead>
