adding validators, success/ error messages and toasts

--- a/src/main/resources/templates/fragments/toast-error.html
+++ b/src/main/resources/templates/fragments/toast-error.html
@@ -1,4 +1,4 @@
-<div th:if="${message}" th:fragment="toast-error (message)" class="toast align-items-center text-bg-danger position-fixed bottom-0 end-50 mb-3 fade show">
+<div th:if="${message}" th:fragment="toast-error (message)" class="toast align-items-center text-bg-danger fade show">
     <div class="d-flex">
         <div class="toast-body" th:text="${message}"></div>
         <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
