--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,7 +4,7 @@
 <body>
     <header th:replace="fragments/header.html"></header>
     <div class="container p-4">
-        <h1>Welcome back, <span class="green-text" th:text="${#strings.capitalize(user.getFirstname())}"></span></h1>
+        <h1>Welcome back, <span class="green-text" th:text="${user.getFirstname()}"></span></h1>
         <div class="mt-5 d-flex justify-content-evenly">
             <div class="card col-4">
                 <div class="card-body">
@@ -31,18 +31,18 @@
                         <p class="card-text m-0" th:text="${newBuddy.getEmail()}"></p>
                         <span class="badge text-bg-success">Buddy added</span>
                     </div>
-                    <p th:if="${relation}" class="card-text mt-3">Last relation added: <span th:text="${#strings.capitalize(relation.getFirstname())} + ' ' + ${#strings.toUpperCase(relation.getLastname())}"></span></p>
+                    <p th:if="${relation}" class="card-text mt-3">Last relation added: <span th:text="${relation.getFirstname()} + ' ' + ${#strings.toUpperCase(relation.getLastname())}"></span></p>
                 </div>
             </div>
             <div class="card col-4">
                 <div class="card-body">
                     <h5 class="card-title">Current Balance</h5>
-                    <h3 class="card-text" th:text="${user.getBalance()} + ' €'"></h3>
+                    <h3 class="card-text" th:text="${#numbers.formatDecimal(user.getBalance(), 1, 'DEFAULT', 2, 'DEFAULT')} + '€'"></h3>
                 </div>
             </div>
         </div>
     </div>
-
+    <div th:replace="fragments/toast-success :: toast-success (message = ${toastText})"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
