--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,17 +6,16 @@
         <div class="login-container p-4 ">
             <div class="logo mb-4 mx-auto px-3 py-2">Pay My Buddy</div>
             <form th:action="@{/login}" th:object="${user}" action="#" class="form" method="post">
-                <div class="input-group mb-3">
+                <div class="input-group">
                     <span class="input-group-text"><i class="far fa-envelope fa-sm"></i></span>
                     <input th:field="*{email}" type="email" class="form-control" placeholder="Email" aria-label="Email" autofocus>
                 </div>
-                <small class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></small>
-                <div class="input-group mb-4">
+                <div class="input-group mt-3">
                     <span class="input-group-text"><i class="fas fa-star-of-life fa-xs"></i></span>
                     <input th:field="*{password}" type="password" class="form-control" placeholder="Password" aria-label="Password">
                 </div>
-                <small class="error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></small>
-                <div class="mb-3 text-center">
+                <small class="error" th:if="${param.error}">Invalid email or password</small>
+                <div class="mb-3 mt-4 text-center">
                     <input class="form-check-input me-1" type="checkbox" value="" id="checkbox">
                     <label class="form-check-label" for="checkbox">Remember me</label>
                 </div>
@@ -29,6 +28,7 @@
             </form>
         </div>
     </div>
+    <div th:replace="fragments/toast-success :: toast-success (message = ${toastText})"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
