--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,28 +6,28 @@
         <div class="login-container p-4 ">
             <div class="logo mb-4 mx-auto px-3 py-2">Pay My Buddy</div>
             <form th:action="@{/register/save}" th:object="${user}" action="#" class="form" method="post">
-                <div class="input-group mb-3">
+                <div class="input-group">
                     <span class="input-group-text"><i class="fas fa-user fa-sm"></i></span>
                     <input th:field="*{lastname}" type="text" class="form-control" placeholder="Lastname" id="lastname" autofocus>
                 </div>
                 <small class="error" th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}"></small>
-                <div class="input-group mb-3">
+                <div class="input-group mt-3">
                     <span class="input-group-text"><i class="fas fa-user fa-sm"></i></span>
                     <input th:field="*{firstname}" type="text" class="form-control" placeholder="Firstname" id="firstname">
                 </div>
                 <small class="error" th:if="${#fields.hasErrors('firstname')}" th:errors="*{firstname}"></small>
-                <div class="input-group mb-3">
+                <div class="input-group mt-3">
                     <span class="input-group-text"><i class="far fa-envelope fa-sm"></i></span>
                     <input th:field="*{email}" type="email" class="form-control" placeholder="Email" id="email">
                 </div>
                 <small class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></small>
-                <div class="input-group mb-1">
+                <div class="input-group mt-3">
                     <span class="input-group-text"><i class="fas fa-star-of-life fa-xs"></i></span>
                     <input th:field="*{password}" type="password" class="form-control" placeholder="Password" id="password">
                 </div>
                 <small class="error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></small>
-                <span th:if="${param.success}" class="success">Your account has been successfully created</span>
-                <span th:if="${param.error}" class="error">There was an error when creating your account. Please try again later</span>
+                <small th:if="${param.success}" class="success">Your account has been successfully created</small>
+                <small th:if="${param.error}" class="error">There was an error when creating your account. Please try again later</small>
                 <div class="my-3 text-center">
                     <p>Already have an account ? <a href="/login">Sign in here</a></p>
                 </div>
@@ -37,6 +37,7 @@
             </form>
         </div>
     </div>
+    <div th:replace="fragments/toast-error :: toast-error (message = ${toastText})"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
