adding home balance icon

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -101,3 +101,9 @@
     transform: translateX(50%);
     bottom: 2rem;
 }
+
+.balance-icon {
+    color: grey;
+    font-size: 50px;
+    opacity: 0.3;
+}
