--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
         <h1>Welcome back, <span class="green-text" th:text="${user.getFirstname()}"></span></h1>
         <div class="mt-5 d-flex justify-content-evenly">
             <div class="card col-4">
-                <div class="card-body">
+                <div class="card-body d-flex flex-column justify-content-between">
                     <h5 class="card-title">Add new relation</h5>
                     <form th:action="@{relation/search-buddy}" method="post" th:object="${searchedUser}" class="d-flex">
                         <div class="input-group">
@@ -35,9 +35,13 @@
                 </div>
             </div>
             <div class="card col-4">
-                <div class="card-body">
+                <div class="card-body d-flex flex-column">
                     <h5 class="card-title">Current Balance</h5>
-                    <h3 class="card-text" th:text="${#numbers.formatDecimal(user.getBalance(), 1, 'DEFAULT', 2, 'DEFAULT')} + '€'"></h3>
+                    <h3 class="card-text mx-auto mt-4 green-text" th:text="${#numbers.formatDecimal(user.getBalance(), 1, 'DEFAULT', 2, 'DEFAULT')} + '€'"></h3>
+                    <i th:if="${user.getBalance() < 50}" class="fas fa-cloud-showers-heavy p-2 ms-auto balance-icon"></i>
+                    <i th:if="${user.getBalance() >= 50 && user.getBalance() < 100}" class="fas fa-cloud p-2 ms-auto balance-icon"></i>
+                    <i th:if="${user.getBalance() >= 100 && user.getBalance() < 200}" class="fas fa-cloud-sun p-2 ms-auto balance-icon"></i>
+                    <i th:if="${user.getBalance() >= 200}" class="fas fa-sun p-2 ms-auto balance-icon"></i>
                 </div>
             </div>
         </div>
