remember me implemented

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
                 </div>
                 <small class="error" th:if="${param.error}">Invalid email or password</small>
                 <div class="mb-3 mt-4 text-center">
-                    <input class="form-check-input me-1" type="checkbox" value="" id="checkbox">
+                    <input class="form-check-input me-1" type="checkbox" name="remember-me" id="checkbox">
                     <label class="form-check-label" for="checkbox">Remember me</label>
                 </div>
                 <div class="my-3 text-center">
